--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,3 +36,6 @@ flutter:
     - assets/images/wardrobe/
     - assets/images/wardrobe/wbottom/
     - assets/images/wardrobe/wtop/
+    - assets/images/wardrobe/bodycon/
+    - assets/images/wardrobe/jacket/
+    - assets/icons/
