--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,6 +43,12 @@
 	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Adā needs access to your camera to snap your style!</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Adā needs access to your photos to analyze your wardrobe!</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Adā needs access to microphone for video recording.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 </dict>
