--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   font_awesome_flutter: ^10.12.0
   glow_bottom_app_bar: ^1.5.2
   flutter_card_swiper: ^7.2.0
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
