--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_markdown: ^0.7.7+1
   share_plus: ^12.0.1
+  connectivity_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
