--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_markdown: ^0.7.7+1
   share_plus: ^12.0.1
   connectivity_plus: ^7.0.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
