--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   share_plus: ^12.0.1
   connectivity_plus: ^7.0.0
   cached_network_image: ^3.4.1
+  url_launcher: ^6.3.2
+  webview_flutter: ^4.13.1
 
 dev_dependencies:
   flutter_test:
